--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
 	</ul>
 	<li>Alba Vercher Sapiña</li>
 	<li>Pau Arnau Huéscar</li>
+	<ul>
+		<li><a href="https://pauarnau.github.io/ProgramaLaPlaza.github.io/">La Plaza</a></li>
+		<li><a href="https://pauarnau.github.io/Lissitzky.github.io/">Vanguardia</a></li>
+		<li><a href="https://pauarnau.github.io/poema.github.io/">Poema</a></li>
+	</ul>
 	<li>Erik Fuentes Rico</li>
 	<ul>
 		<li><a href="https://Fuenteskire.github.io/erik.poema.github.io/"></a></li>
